--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Seja bem vindo ao TypeScript</h1>
-    <script src="prod/index.js"></script>
+    <script src="dist/index.js"></script>
+    <script src="dist/app.js"></script>
 </body>
 </html>
